[project]
name = "presentation-figures"
version = "0.1.0"
description = ""
authors = [
    {name = "Kelly Anne Pierce",email = "kellyannepierce@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotnine (>=0.14.6,<0.15.0)",
    "mypy (>=1.16.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
